#10581 remove Foreign binding and make JNA the only binding
Signed-off-by: Ludovic Orban <lorban@bitronix.be>