@@ -21,7 +21,7 @@
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty.quic</groupId>
-      <artifactId>jetty-quic-quiche-jna</artifactId>
+      <artifactId>jetty-quic-quiche</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -48,38 +48,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <profiles>
-    <profile>
-      <id>jdk17</id>
-      <activation>
-        <jdk>17</jdk>
-      </activation>
-      <!--
-      This profile makes sure the Foreign binding is used for tests when running exactly on JDK 17.
-      Older and newer JDKs will revert to the JNA binding.
-      -->
-      <dependencies>
-        <dependency>
-          <groupId>org.eclipse.jetty.quic</groupId>
-          <artifactId>jetty-quic-quiche-foreign-incubator</artifactId>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <!-- Make sure to use the Foreign binding by adding and opening the jdk.incubator.foreign module. -->
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>@{argLine}
-                ${jetty.surefire.argLine}
-                --add-modules=jdk.incubator.foreign
-                --add-opens jdk.incubator.foreign/jdk.incubator.foreign=ALL-UNNAMED
-                --enable-native-access ALL-UNNAMED</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
